--- a/openiboot/mk8900image/Makefile
+++ b/openiboot/mk8900image/Makefile
@@ -1,6 +1,6 @@
 MKIMAGEOBJS=mk8900image.o
 LIBRARIES=-L/usr/lib -lm -ldl -lpng -lcrypto -lz
-CFLAGS +=
+CFLAGS += -m32
 
 ifeq ($(ARCH), x86_64)
 	LIBXPWN=x86_64/libxpwn.a x86_64/libcommon.a
